[massote-marques]layout2

--- a/assets/sass/base/_footer.scss
+++ b/assets/sass/base/_footer.scss
@@ -1,6 +1,5 @@
 
 footer {
-    margin: 80px 0 0 0;
     background: #229D5C;
     font-family: 'Gandhi Sans Regular';
 
@@ -22,6 +21,7 @@ footer {
 
     .box-footer {
         margin: 25px 0;
+        padding: 35px 0;
         width: 100%;
         display: inline-flex;
 
