--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1,6 +1,7 @@
 #logo {
   height: 90px;
-  padding-right: 300px;
+  padding-right: 0;
+  margin: 0 30px;
 }
 
 .navbar {
@@ -63,7 +64,6 @@
 }
 
 footer {
-  margin: 80px 0 0 0;
   background: #229D5C;
   font-family: 'Gandhi Sans Regular';
 }
@@ -86,6 +86,7 @@ footer .direitos {
 
 footer .box-footer {
   margin: 25px 0;
+  padding: 35px 0;
   width: 100%;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -158,6 +159,13 @@ footer .box-footer .txt-destaque h3 {
   }
 }
 
+@font-face {
+  font-family: 'Grandhi Sans';
+  font-family: 'Grandhi Sans Regular';
+  src: url(../font/gandhisans_regular_macroman/GandhiSans-Regular-webfont.woff) format("woff");
+  src: url(../font/gandhisans_bold_macroman/GandhiSans-Bold-webfont.woff) format("woff");
+}
+
 *,
 *::before,
 *::after {
@@ -175,6 +183,7 @@ body {
   overflow-x: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Gandhi Sans';
 }
 
 p {
@@ -191,11 +200,11 @@ a {
 }
 
 .page-section-top {
-  padding: 80px 0 0 0;
+  padding: 80px 0 80px 0px;
 }
 
 .page-section-top h2 {
-  color: #229D5C;
+  color: #229d5c;
 }
 
 .page-section-top li {
@@ -222,6 +231,10 @@ a {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+#equipe .team-photo img {
+  border-radius: 50%;
 }
 
 .page-section-middle {
@@ -258,11 +271,12 @@ a {
   background: #000;
   bottom: 20px;
   position: absolute;
+  text-align: left;
   width: 80%;
   opacity: 0.9;
   padding: 15px;
   right: 0;
-  font-family: 'Gandhi Sans Regular';
+  font-family: 'Gandhi Sans';
 }
 
 #parallaxBar .txt-parallax::before {
@@ -278,20 +292,16 @@ a {
 #parallaxBar .txt-parallax h2 {
   color: #229D5C;
   padding-top: 5px;
-  font-size: 35px;
-  padding-left: 135px;
+  font-weight: 600;
 }
 
 #parallaxBar .txt-parallax h3 {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  font-size: 40px;
   margin: 0;
   color: #fff;
-  line-height: 40px;
   padding-bottom: 25px;
-  padding-left: 35px;
 }
 
 #parallaxBar .txt-parallax li {
@@ -383,16 +393,12 @@ a {
 
 #parallax-news .txt-parallax {
   font-family: 'Gandhi Sans Regular';
-  bottom: 30px;
+  bottom: 80px;
   position: absolute;
   width: 100%;
   opacity: 0.9;
   text-align: center;
   right: 0;
-}
-
-#parallax-news .txt-parallax .button {
-  float: right;
 }
 
 #parallax-news .txt-parallax::before {
@@ -406,10 +412,8 @@ a {
 }
 
 #parallax-news .txt-parallax h2 {
-  color: #229D5C;
-  padding-top: 5px;
-  font-size: 35px;
-  padding-left: 135px;
+  color: #fff;
+  padding-bottom: 55px;
   font-family: 'Playfair Display', serif;
 }
 
@@ -422,7 +426,6 @@ a {
   color: #fff;
   line-height: 40px;
   padding-bottom: 25px;
-  padding-left: 35px;
   font-family: 'Cambria Regular', serif;
 }
 
@@ -455,22 +458,11 @@ a {
 
 .features {
   padding: 15px;
-  background: #fff;
   border-radius: 2px;
   display: inline-block;
   height: 350px;
   margin: 1rem;
   position: relative;
-  width: 300px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.07), 0 1px 2px rgba(0, 0, 0, 0.07);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.07), 0 1px 2px rgba(0, 0, 0, 0.07);
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-
-.features:hover {
-  -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.07), 0 10px 10px rgba(0, 0, 0, 0.07);
-          box-shadow: 0 14px 28px rgba(0, 0, 0, 0.07), 0 10px 10px rgba(0, 0, 0, 0.07);
 }
 
 .features .feature-icon {
@@ -486,9 +478,13 @@ a {
   font-family: 'Gandhi Sans Regular';
 }
 
+.features .feature-info h4 {
+  text-align: center;
+}
+
 .features .box-button {
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 .features .box-button .button {
@@ -518,6 +514,10 @@ a {
   font-family: 'Gandhi Sans Regular';
 }
 
+.features-news .feature-info h4 {
+  text-align: center;
+}
+
 .features-news .feature-info .feature-title {
   color: #323232;
 }
@@ -539,5 +539,27 @@ a {
 
 .features-news .box-button .button a {
   color: #fff;
+}
+
+.page-section-ptb {
+  background: #f7f7f7;
+  padding: 80px 0;
+}
+
+.page-section-ptb h2 {
+  color: #229D5C;
+}
+
+.team {
+  text-align: center;
+  overflow: hidden;
+}
+
+.team h5 a {
+  color: #229d5c;
+}
+
+.team-round .team-photo img {
+  border-radius: 50%;
 }
 /*# sourceMappingURL=main.css.map */
