--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,6 +2,13 @@
 @import './base/buttons';
 @import './base/footer';
 
+@font-face {
+    font-family: 'Grandhi Sans';
+    font-family: 'Grandhi Sans Regular';
+    src: url(../font/gandhisans_regular_macroman/GandhiSans-Regular-webfont.woff)  format('woff');
+    src: url(../font/gandhisans_bold_macroman/GandhiSans-Bold-webfont.woff)  format('woff');
+}
+
 *, 
 *::before,
 *::after {
@@ -20,6 +27,8 @@
 body {
     overflow-x: hidden;
     box-sizing: border-box;
+    font-family: 'Gandhi Sans';
+
 }
 p {
     color: #727376;
@@ -35,10 +44,10 @@ a {
 }
 
 .page-section-top {
-    padding: 80px 0 0 0;
+    padding: 80px 0 80px 0px;
     
     h2 {
-        color: #229D5C;
+        color: #229d5c;
     }
     li {
         color:  #229D5C;
@@ -63,6 +72,15 @@ a {
         left: 0;
         right: 0;
     }
+}
+
+#equipe {
+    .team-photo {
+        img {
+            border-radius: 50%;
+        }
+    }
+    
 }
 
 .page-section-middle {
@@ -97,11 +115,12 @@ a {
         background: #000;
         bottom: 20px;
         position: absolute;
+        text-align:left;
         width: 80%;
         opacity: 0.9;
         padding: 15px;
         right: 0;
-        font-family: 'Gandhi Sans Regular';
+        font-family: 'Gandhi Sans';
 
         &::before {
             display: none;
@@ -116,18 +135,14 @@ a {
         h2 {
             color: #229D5C;
             padding-top: 5px;
-            font-size: 35px;
-            padding-left: 135px;
+            font-weight: 600;
         }
 
         h3 {
             display: inline-flex;
-            font-size: 40px;
             margin: 0;
             color: #fff;
-            line-height: 40px;
             padding-bottom: 25px;
-            padding-left: 35px;
         }
 
         li {
@@ -222,14 +237,13 @@ a {
 
     .txt-parallax {
         font-family: 'Gandhi Sans Regular';
-        bottom: 30px;
+        bottom: 80px;
         position: absolute;
         width: 100%;
         opacity: 0.9;
         text-align: center;
         right: 0;
         .button {
-            float: right;
         }
 
         &::before {
@@ -243,10 +257,8 @@ a {
         }
 
         h2 {
-            color: #229D5C;
-            padding-top: 5px;
-            font-size: 35px;
-            padding-left: 135px;
+            color: #fff;
+            padding-bottom: 55px;
             font-family: 'Playfair Display', serif;
         }
 
@@ -257,7 +269,6 @@ a {
             color: #fff;
             line-height: 40px;
             padding-bottom: 25px;
-            padding-left: 35px;
             font-family: 'Cambria Regular', serif;
         }
 
@@ -290,19 +301,11 @@ a {
 }
 .features {
     padding: 15px;
-    background: #fff;
     border-radius: 2px;
     display: inline-block;
     height: 350px;
     margin: 1rem;
     position: relative;
-    width: 300px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.07), 0 1px 2px rgba(0,0,0,0.07);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-
-&:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.07), 0 10px 10px rgba(0, 0, 0, 0.07);
-  }
 
   .feature-icon {
       font-size: 40px;
@@ -315,10 +318,13 @@ a {
   .feature-info {
       text-align: justify;
     font-family: 'Gandhi Sans Regular';
+    h4 {
+        text-align: center;
+    }
   }
 .box-button {
     width: 100%;
-    text-align: center;
+    text-align: left;
     .button {
         float: none;
     }
@@ -341,7 +347,9 @@ a {
   
   .feature-info {
     font-family: 'Gandhi Sans Regular';
-
+    h4 {
+        text-align: center;
+    }
     .feature-title {
         color: #323232;
     }
@@ -360,6 +368,30 @@ a {
             a {
                 color: #fff;
             }
+        }
+    }
+}
+.page-section-ptb {
+    background: #f7f7f7;
+    padding: 80px 0;
+    
+    h2 {
+        color: #229D5C;
+    }
+}
+.team {
+    text-align: center;
+    overflow: hidden;
+    h5 {
+        a {color: #229d5c;
+        }
+    }
+}
+
+.team-round {
+    .team-photo {
+        img {
+            border-radius: 50%;
         }
     }
 }
